--- a/index.html
+++ b/index.html
@@ -1,111 +1,202 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>root@flerlage:~$ portfolio</title>
     <link rel="icon" href="assets/images/logo.png">
-    <link rel="stylesheet" href="assets/css/indexName.css">
-    <title>Kevin Flerlage</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/quick-actions.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-
-<body id="top" class="main">
-    <svg class="svg-background" viewbox="0 0 100 100" preserveAspectRatio="xMidYMax meet">
-        <!-- Filter is the drop shadow for the SVG -->
-        <filter id="dropshadow" height="130%">
-            <feGaussianBlur in="SourceAlpha" stdDeviation="2" />
-            <!-- stdDeviation is how much to blur -->
-            <feOffset dx="1" dy="0" result="offsetblur" /> <!-- how much to offset -->
-            <feComponentTransfer>
-                <feFuncA type="linear" slope="0.5" /> <!-- slope is the opacity of the shadow -->
-            </feComponentTransfer>
-            <feMerge>
-                <feMergeNode /> <!-- this contains the offset blurred image -->
-                <feMergeNode in="SourceGraphic" />
-                <!-- this contains the element that the filter is applied to -->
-            </feMerge>
-        </filter>
-        <polygon class="mango-triangle" points="-20,100 32,45 80,100" style="filter:url(#dropshadow)"></polygon>
-        <polygon class="transparent-mango-triangle" points="-40,92 53,55 60,100"></polygon>
-        <polygon class="dark-lime-triangle" points="50,100 85,61 125,100" style="filter:url(#dropshadow)"></polygon>
-        <polygon class="light-blue-triangle" points="-10,100 53,55 60,100" style="filter:url(#dropshadow)"></polygon>
-        <polygon class="baby-blue-triangle" points="42,100 53,55 70,100"></polygon>
-        <polygon class="dark-lime-triangle" points="-55,100 -25,78 5,100" style="filter:url(#dropshadow)"></polygon>
-        <polygon class="lime-triangle" points="-40,100 -25,78 -11,100"></polygon>
-        <polygon class="dull-blue-triangle" points="60,100 71,85 75,100" style="filter:url(#dropshadow)"></polygon>
-        <polygon class="blue-triangle" points="72,100 70,80 85,100"></polygon>
-        <polygon class="dark-blue-triangle" points="72,100 70,80 76,100"></polygon>
-        <polygon class="dark-magenta-triangle" points="-25,100 22,90 40,100"></polygon>
-        <polygon class="magenta-triangle" points="8,100 22,90 40,100"></polygon>
-    </svg>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12 col-lg-10 mp-reset">
-                <div class="svg-name">
-                    <svg class="intro mp-reset" viewbox="0 0 100 100" preserveAspectRatio="xMinYMid meet">
-                        <text text-anchor="start" x="0" y="40" class="text text-stroke" clip-path="url(#text1)">Kevin Flerlage</text>
-                        <text text-anchor="start" x="0" y="40" class="text text-stroke text-stroke-2" clip-path="url(#text1)">Kevin Flerlage</text>
-                        <defs>
-                            <clipPath id="text1">
-                                <text text-anchor="start" x="0" y="40" class="text">Kevin Flerlage</text>
-                            </clipPath>
-                        </defs>
-                    </svg>
+<body>
+    <!-- Boot Sequence Screen -->
+    <div id="boot-screen" class="boot-screen active">
+        <div class="boot-content">
+            <div id="boot-log" class="boot-log"></div>
+            <div id="boot-progress-container" class="boot-progress-container">
+                <div class="boot-progress-bar">
+                    <div id="boot-progress-fill" class="boot-progress-fill"></div>
                 </div>
-                <div class="mobile-name">
-                    <svg class="intro mp-reset" viewbox="0 0 150 175" preserveAspectRatio="xMinYMid meet">
-                        <text text-anchor="start" x="0" y="60" class="text text-stroke" clip-path="url(#text2)">Kevin Flerlage</text>
-                        <text text-anchor="start" x="0" y="60" class="text text-stroke text-stroke-2" clip-path="url(#text2)">Kevin Flerlage</text>
-                        <defs>
-                            <clipPath id="text2">
-                                <text text-anchor="start" x="0" y="60" class="text">Kevin Flerlage</text>
-                            </clipPath>
-                        </defs>
-                    </svg>
+                <div id="boot-progress-text" class="boot-progress-text">0%</div>
+            </div>
+        </div>
+        <button id="skip-boot" class="skip-btn">[SKIP_BOOT]</button>
+    </div>
+
+    <!-- Login Screen -->
+    <div id="login-screen" class="login-screen">
+        <div class="login-container">
+            <div class="login-header">
+                <span>PortfolioOS v3.2.9</span>
+                <span class="system-status">SYSTEM READY</span>
+            </div>
+            <div>
+                <div class="login-row">
+                    <span class="login-label">login:</span>
+                    <span id="login-username" class="login-input"></span><span class="cursor">█</span>
+                </div>
+                <div class="login-row hidden" id="password-row">
+                    <span class="login-label">password:</span>
+                    <span id="login-password" class="login-input"></span>
                 </div>
             </div>
-            <div class="col-md-12 col-lg-2 mp-reset">
-                <div>
-                    <a href="./portfolio.html">
-                        <div class="index-link-box">
-                            <div class="text-right index-link">
-                                Portfolio
-                            </div>
-                        </div>
-                    </a>
-                    <a href="./assets/resume/Kevin Flerlage Resume.pdf" target="_blank">
-                        <div class="index-link-box">
-                            <div class="text-right index-link">Resume</div>
-                        </div>
-                    </a>
-                    <a href="https://www.linkedin.com/in/kevinflerlage/" target="_blank">
-                        <div class="index-link-box">
-                            <div class="text-right index-link">LinkedIn</div>
-                        </div>
-                    </a>
-                    <a href="https://github.com/Smushed" target="_blank">
-                        <div class="index-link-box">
-                            <div class="text-right index-link">GitHub</div>
-                        </div>
-                    </a>
-                    <a href="mailto:k.j.flerlage@gmail.com">
-                        <div class="index-link-box">
-                            <div class="text-right index-link">k.j.flerlage@gmail.com</div>
-                        </div>
-                    </a>
-                </div>
+            <div id="access-granted" class="access-message hidden">
+                <span class="success-text">ACCESS GRANTED</span>
+                <span class="loading-text">LOADING USER PROFILE...</span>
             </div>
         </div>
     </div>
 
-    <script src='assets/JS/jquery-3.3.1.min.js'></script>
-    <script src="assets/JS/bootstrap.bundle.min.js"></script>
-    <script src="assets/JS/indexName.js"></script>
-</body>
+    <!-- Main Terminal Screen -->
+    <div id="main-screen" class="main-screen">
+        <!-- Matrix Rain Canvas -->
+        <canvas id="matrix-canvas"></canvas>
+        
+        <!-- Scanlines and Grid Overlay -->
+        <div class="scanlines"></div>
+        <div class="grid-overlay"></div>
 
+        <!-- Terminal Status Bar (Header) -->
+        <div class="terminal-status-bar">
+            <div class="status-left">
+                <span class="status-item">[USER: guest]</span>
+                <span class="status-item">[HOST: portfolio]</span>
+                <span class="status-item">[PWD: ~]</span>
+            </div>
+            <div class="status-right">
+                <span class="status-item">MEM: <span id="memory-usage">14%</span></span>
+                <span class="status-item" id="system-time">--:--:--</span>
+                <span class="status-item">UPTIME: <span id="uptime">00:00</span></span>
+            </div>
+        </div>
+
+        <!-- Main Terminal Area -->
+        <div class="terminal-wrapper">
+            <div id="terminal-output" class="terminal-output">
+                <!-- Welcome Message / ASCII Art -->
+                <div class="welcome-message">
+<pre class="ascii-art">
+  _  __          _           ______ _           _                  
+ | |/ /         (_)         |  ____| |         | |                 
+ | ' / _____   ___ _ __     | |__  | | ___ _ __| | __ _  __ _  ___ 
+ |  < / _ \ \ / / | '_ \    |  __| | |/ _ \ '__| |/ _` |/ _` |/ _ \
+ | . \  __/\ V /| | | | |   | |    | |  __/ |  | | (_| | (_| |  __/
+ |_|\_\___| \_/ |_|_| |_|   |_|    |_|\___|_|  |_|\__,_|\__, |\___|
+                                                         __/ |     
+                                                        |___/      
+</pre>
+                    <div class="welcome-text">
+                        <p>Welcome to PortfolioOS v3.2.9</p>
+                        <p>Type 'help' to see available commands.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Quick Actions Toolbar -->
+            <div class="quick-actions">
+                <button class="action-btn" data-cmd="about">[ABOUT]</button>
+                <button class="action-btn" data-cmd="projects">[PROJECTS]</button>
+                <button class="action-btn" data-cmd="contact">[CONTACT]</button>
+                <button class="action-btn" data-cmd="resume">[RESUME]</button>
+                <button class="action-btn" data-cmd="help">[HELP]</button>
+            </div>
+
+            <!-- Active Input Line -->
+            <div class="terminal-input-line">
+                <span class="prompt">guest@portfolio:~$</span>
+                <input type="text" id="terminal-input" class="terminal-input" autocomplete="off" spellcheck="false" autofocus>
+                <span class="cursor">█</span>
+            </div>
+        </div>
+
+        <!-- Hidden Templates for Content (will be cloned into terminal output) -->
+        <template id="tpl-about">
+            <div class="command-output">
+                <div class="file-header">$ cat /etc/profile.txt</div>
+                <div class="content-block">
+                    <div class="info-row"><span class="label">NAME:</span> Kevin Flerlage</div>
+                    <div class="info-row"><span class="label">ROLE:</span> Full Stack Developer</div>
+                    <div class="info-row"><span class="label">LOC:</span> Cyberspace</div>
+                    <div class="info-row"><span class="label">BIO:</span> > Leveraging AI to build innovative web solutions.</div>
+                    <br>
+                    <div class="file-header">$ ls -lh /usr/bin/skills/</div>
+                    <div class="file-list">
+                        <div class="file-row"><span class="perms">-rwxr-xr-x</span> <span class="size">8.2M</span> <span class="date">Jan 15</span> <span class="name">javascript.bin</span></div>
+                        <div class="file-row"><span class="perms">-rwxr-xr-x</span> <span class="size">6.4M</span> <span class="date">Jan 10</span> <span class="name">react.so</span></div>
+                        <div class="file-row"><span class="perms">-rwxr-xr-x</span> <span class="size">5.1M</span> <span class="date">Jan 08</span> <span class="name">nodejs.bin</span></div>
+                        <div class="file-row"><span class="perms">-rwxr-xr-x</span> <span class="size">4.8M</span> <span class="date">Dec 20</span> <span class="name">mongodb.db</span></div>
+                    </div>
+                </div>
+            </div>
+        </template>
+
+        <template id="tpl-projects">
+            <div class="command-output">
+                <div class="file-header">$ ls -la /home/guest/projects/</div>
+                <div class="project-list">
+                    <div class="project-entry">
+                        <div class="project-meta">drwxr-xr-x  guest  guest  4096  Sep 15  <span class="project-name">eliminator/</span></div>
+                        <div class="project-details">
+                            <div>> STATUS: <span class="status-live">[LIVE]</span></div>
+                            <div>> STACK: MongoDB, Express, React, Node.js</div>
+                            <div>> DESC: Full-stack NFL elimination pool application.</div>
+                            <div>> URL: <a href="https://eliminator.football" target="_blank" class="terminal-link">https://eliminator.football</a></div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="project-entry">
+                        <div class="project-meta">drwxr-xr-x  guest  guest  4096  Oct 20  <span class="project-name">neochicago/</span></div>
+                        <div class="project-details">
+                            <div>> STATUS: <span class="status-dev">[DEV]</span></div>
+                            <div>> STACK: Handlebars, MongoDB, Node.js</div>
+                            <div>> DESC: Modern web application framework.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </template>
+
+        <template id="tpl-contact">
+            <div class="command-output">
+                <div class="file-header">$ netstat -an | grep ESTABLISHED</div>
+                <div class="connection-list">
+                    <div class="conn-row">
+                        <span class="proto">TCP</span>
+                        <span class="local">127.0.0.1:25</span>
+                        <span class="remote">email:smtp</span>
+                        <span class="state">ESTABLISHED</span>
+                        <a href="mailto:kevinflerlage@pm.me" class="terminal-link">kevinflerlage@pm.me</a>
+                    </div>
+                    <div class="conn-row">
+                        <span class="proto">TCP</span>
+                        <span class="local">127.0.0.1:443</span>
+                        <span class="remote">github:https</span>
+                        <span class="state">ESTABLISHED</span>
+                        <a href="https://github.com/Smushed" target="_blank" class="terminal-link">github.com/Smushed</a>
+                    </div>
+                    <div class="conn-row">
+                        <span class="proto">TCP</span>
+                        <span class="local">127.0.0.1:443</span>
+                        <span class="remote">linkedin:https</span>
+                        <span class="state">ESTABLISHED</span>
+                        <a href="https://www.linkedin.com/in/kevinflerlage/" target="_blank" class="terminal-link">linkedin.com/in/kevinflerlage</a>
+                    </div>
+                    <div class="conn-row">
+                        <span class="proto">TCP</span>
+                        <span class="local">127.0.0.1:80</span>
+                        <span class="remote">resume:http</span>
+                        <span class="state">READY</span>
+                        <a href="./assets/resume/Kevin Flerlage Resume.pdf" target="_blank" class="terminal-link">download_resume.pdf</a>
+                    </div>
+                </div>
+            </div>
+        </template>
+    </div>
+
+    <script src="js/script.js"></script>
+</body>
 </html>
